# Matlang

./: .gitignore  Cargo.toml  LICENSE  MASTER_MATLAB_REIMPLEMENTATION_PLAN.txt  README.md  tmp_mode_multi.m  vars.mat
benchmarks/: README.md
benchmarks/macro/: README.md
benchmarks/micro/: README.md
benchmarks/real-world/: README.md
bootstrap/: README.md
bootstrap/fixtures/: README.md
bootstrap/golden/: README.md
bootstrap/samples/: README.md
docs/architecture/: COMPILER_PIPELINE.md  MODULE_MAP.md  OVERVIEW.md  RUNTIME_OVERVIEW.md  RUST_WORKSPACE.md
docs/compatibility/: FEATURE_MATRIX.md  KNOWN_DIFFERENCES.md  SOURCE_GAP_REPORT.md
docs/decisions/: ADR-0001-implementation-language.md  ADR-0002-execution-strategy.md
docs/handoff/: CURRENT_STATE.md  FUTURE_ONLY.md  KNOWN_BREAKAGE.md  NEXT_STEPS.md  OPEN_QUESTIONS.md
docs/roadmap/: PHASES.md
scripts/: cargo-msvc.cmd  cargo-msvc.ps1
spec/ir/: HIR.md  LIR.md  MIR.md
spec/language/: LEXICAL_GRAMMAR.md  SEMANTICS.md  SYNTAX_GRAMMAR.md
spec/runtime/: ARRAY_MODEL.md  VALUE_MODEL.md
spec/stdlib/: BUILTINS.md
spec/tooling/: TESTING.md
src/cli/: Cargo.toml  README.md
src/cli/src/: main.rs  windows_host.rs
src/codegen/: Cargo.toml  README.md
src/codegen/src/: lib.rs
src/codegen/tests/: bytecode_golden.rs
src/execution/: Cargo.toml  README.md
src/execution/src/: bytecode.rs  graphics.rs  lib.rs
src/execution/tests/: bytecode_vm_golden.rs  graphics_export.rs  interpreter_golden.rs
src/frontend/: Cargo.toml  README.md
src/frontend/src/: ast.rs  diagnostics.rs  lib.rs  parser.rs  source.rs  testing.rs
src/frontend/src/lexer/: mod.rs  scanner.rs  token.rs
src/frontend/tests/: parser_golden.rs
src/interop/: Cargo.toml  README.md
src/interop/src/: lib.rs
src/interop/tests/: workspace_snapshot.rs
src/ir/: Cargo.toml  README.md
src/ir/src/: hir.rs  lib.rs  lower.rs  testing.rs
src/ir/tests/: hir_golden.rs
src/optimizer/: Cargo.toml  README.md
src/optimizer/src/: lib.rs
src/optimizer/tests/: optimizer_golden.rs
src/platform/: Cargo.toml  README.md
src/platform/src/: lib.rs
src/platform/tests/: bytecode_artifact.rs
src/resolver/: Cargo.toml  README.md
src/resolver/src/: lib.rs
src/runtime/: Cargo.toml  README.md
src/runtime/src/: lib.rs
src/semantics/: Cargo.toml  README.md
src/semantics/src/: binder.rs  diagnostics.rs  lib.rs  resolution.rs  symbols.rs  testing.rs  workspace.rs
src/semantics/tests/: binder_golden.rs
src/stdlib/: Cargo.toml  README.md
src/stdlib/src/: lib.rs
templates/module/: DECISIONS.md  README.md  SPEC.md  TASKS.md  TEST_PLAN.md
tests/: README.md
tests/compatibility/: README.md  nd_reduction_fidelity.md
tests/conformance/: README.md
tests/fixtures/codegen/bytecode/: comma_separated_codegen.golden  comma_separated_codegen.m  comma_separated_forwarded_cells_codegen.golden  comma_separated_forwarded_cells_codegen.m  comma_separated_forwarded_paren_codegen.golden  comma_separated_forwarded_paren_codegen.m  control_flow_codegen.golden  control_flow_codegen.m  handle_receivers_codegen.golden  handle_receivers_codegen.m  handles_and_nested_codegen.golden  handles_and_nested_codegen.m  index_and_field_codegen.golden  index_and_field_codegen.m  try_catch_codegen.golden
tests/fixtures/execution/interpreter/: CallSelectorPoint.m  base_text_to_double_builtin.golden  base_text_to_double_builtin.m  builtin_accumarray.golden  builtin_accumarray.m  builtin_angle_helpers.golden  builtin_angle_helpers.m  builtin_array_helpers.golden  builtin_array_helpers.m  builtin_array_rearrangement.golden  builtin_array_rearrangement.m  builtin_arrayfun_helpers.golden  builtin_arrayfun_helpers.m  builtin_blockdiag_helpers.golden  builtin_blockdiag_helpers.m  builtin_bounds_nd_helpers.golden  builtin_bounds_nd_helpers.m  builtin_cellfun_helpers.golden  builtin_cellfun_helpers.m  builtin_complex_numbers.m  (+478 more)
tests/fuzz/: README.md
tests/integration/: README.md
tests/perf/: README.md
tests/regression/: README.md
tests/unit/: README.md
tmp/: save_load_demo.m  save_load_demo.mat  save_struct_demo.m  save_struct_demo.mat  sin_plot_demo.m  sin_plot_demo_figure_call.m  sin_plot_demo_workaround.m  sinusoidal_wave_exact.m  viewer_host_ie_edge_test.ps1  viewer_host_img_test.ps1  viewer_host_test.ps1  viewer_host_test_ready.txt
tmp/edge-viewer-test/: index.html
tmp/edge-viewer-test/profile/: Local State
tmp/load_semantic_demo/: prep.m
tmp/semantic_load_check/: main.m
tools/: README.md
tools/codegen/: README.md
tools/format/: README.md
tools/perf/: README.md
tools/release/: README.md
tools/test-harness/: README.md
(+106 files in other folders)
