[package]
name = "matc"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
matlab-codegen = { path = "../codegen" }
matlab-execution = { path = "../execution" }
matlab-frontend = { path = "../frontend" }
matlab-interop = { path = "../interop" }
matlab-ir = { path = "../ir" }
matlab-optimizer = { path = "../optimizer" }
matlab-platform = { path = "../platform" }
matlab-resolver = { path = "../resolver" }
matlab-runtime = { path = "../runtime" }
matlab-semantics = { path = "../semantics" }
matlab-stdlib = { path = "../stdlib" }

[[bin]]
name = "matc"
path = "src/main.rs"

[target.'cfg(windows)'.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tao = "0.30"
wry = "0.47"
windows = { version = "0.58", features = ["Win32_Foundation", "Win32_UI_Controls_Dialogs"] }
