[package]
name = "matlab-interop"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
matlab-runtime = { path = "../runtime" }

[dev-dependencies]
matlab-execution = { path = "../execution" }
matlab-frontend = { path = "../frontend" }
matlab-ir = { path = "../ir" }
matlab-optimizer = { path = "../optimizer" }
matlab-resolver = { path = "../resolver" }
matlab-semantics = { path = "../semantics" }

[lib]
path = "src/lib.rs"
