[package]
name = "matlab-semantics"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
matlab-frontend = { path = "../frontend" }
matlab-interop = { path = "../interop" }
matlab-resolver = { path = "../resolver" }
matlab-runtime = { path = "../runtime" }

[lib]
path = "src/lib.rs"
